--- a/src/frontend/styles/components/folder.css
+++ b/src/frontend/styles/components/folder.css
@@ -77,10 +77,10 @@ pinned-folder {
     cursor: pointer;
     display: block;
     padding: 10px 30px;
-    margin: 5px 0;
+    margin: 0 10px;
     border-radius: 7px;
     font-size: 14px;
-    color: var(--less-important);
+    color: var(--important);
     opacity: 0;
     transform: translateY(30%);
     transition: opacity .7s ease, transform .25s ease, scale .2s ease, background .15s ease;
@@ -94,7 +94,8 @@ pinned-folder i {
 
 pinned-folder:hover {
     background: var(--hover);
-    color: var(--important);
+    font-weight: var(--font-weight-bold);
+    scale: 1.05;
 }
 
 
