--- a/src/frontend/styles/components/note.css
+++ b/src/frontend/styles/components/note.css
@@ -85,9 +85,23 @@ recently-changed-note-card .note-content-box a {color: rgb(67, 142, 255)}
     visibility: hidden;
 }
 
-.bookmarked-note {
-    background: var(--bookmark) !important;
+#bookmark-icon {
+    display: none;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background: var(--bookmark-patch-bg-color);
+    color: white;
+    width: 27px;
+    height: 27px;
+    font-size: 16px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: 150ms;
 }
+
+
 
 recently-viewed-note-card {
     background-color: transparent;
