--- a/src/frontend/styles/general/sidebar.css
+++ b/src/frontend/styles/general/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
     position: relative;
     display: grid;
-    grid-template-rows: 70px 1fr;
+    grid-template-rows: 125px 1fr;
     background: var(--sidebar);
     border-right: var(--border-sidebar-right);
 }
@@ -9,8 +9,7 @@
 .sidebar-logo {
     display: flex;
     flex-wrap: wrap;
-    align-content: end;
-    padding: 5px 15px;
+    padding: 30px;
 }
 
 .logo-container {
@@ -42,7 +41,7 @@
     display: grid;
     grid-template-rows: 1fr 55px;
     padding: 10px;
-    height: calc(100dvh - 70px);
+    height: calc(100dvh - 125px);
 }
 
 .sidebar-content-upper {
@@ -56,18 +55,17 @@
 
 .sidebar[data-width="large"] .sidebar-content a,
 .sidebar[data-width="large"] .sidebar-dropdown {
-    text-decoration: none;
     position: relative;
     cursor: pointer;
-    border: none;
     display: flex;
     align-items: center;
     justify-content: normal;
     margin: 10px 0;
+    padding: 0 25px;
+    column-gap: 10px;
     border-radius: 10px;
     width: 100%;
     height: 45px;
-    background-color: transparent;
     color: var(--sidebar-text);
     transition: .2s;
 }
@@ -91,7 +89,6 @@
 }
 
 .sidebar[data-width="large"] .sidebar-content a span {
-    margin-left: 40px;
     font-size: 16px;
 }
 
@@ -102,9 +99,7 @@
 }
 
 .sidebar[data-width="large"] .sidebar-content a i {
-    position: absolute;
     font-size: 18px;
-    left: 12px;
 }
 
 .sidebar[data-width="small"] .sidebar-content a i {
@@ -133,11 +128,6 @@
 }
 
 
-.sidebar[data-width="large"] #chevron-pinned-folder,
-.sidebar[data-width="large"] #chevron-categories {
-    margin: 0 12px;
-}
-
 
 #pinned-folder-icon,
 #categories-icon {
@@ -153,10 +143,34 @@
 }
 
 
-.active-tab {
-    background-color: var(--active-tab-bg) !important;
-    color: var(--active-tab-text) !important;
+.pinned-folders,
+.categories {
+    border-radius: 10px;
+    background: var(--sidebar-dropdown-bg-color);
 }
+
+
+.sidebar .active-tab,
+.sidebar-shadow .active-tab,
+.sidebar-invisible .active-tab {
+    background-color: var(--active-tab-bg-on-original-sidebar) !important;
+    color: var(--active-tab-text-on-original-sidebar) !important;
+    font-weight: var(--font-weight-bold);
+}
+
+
+.sidebar-soft .active-tab {
+    background-color: var(--active-tab-bg-on-soft-sidebar) !important;
+    color: var(--active-tab-text-on-soft-sidebar) !important;
+    font-weight: var(--font-weight-bold);
+}
+
+
+
+
+
+
+
 
 .sidebar-shadow {
     background-color: var(--sidebar-shadow-bg);
