--- a/src/frontend/styles/textEditor/toolbarTop.css
+++ b/src/frontend/styles/textEditor/toolbarTop.css
@@ -1,14 +1,30 @@
 #exit-editor-btn,
-#recently-viewed-notes-btn {
+#recently-viewed-notes-btn,
+.cycle-container i {
     display: flex;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     cursor: pointer;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 18px;
     color: var(--editor-text);
+}
+
+#editor-options-btn:hover,
+#exit-editor-btn:hover,
+#recently-viewed-notes-btn:hover,
+.cycle-container i:hover {
+    background-color: var(--hover-button-soft);
+    scale: 1.2;
+}
+
+#editor-options-btn:active,
+#exit-editor-btn:active,
+#recently-viewed-notes-btn:active,
+.cycle-container i:active {
+    scale: 1.3;
 }
 
 
@@ -20,21 +36,9 @@
 
 
 .cycle-container {
+    display: flex;
     color: var(--editor-text);
-    column-gap: 20px;
     margin-right: 20px;
-}
-
-.cycle-container i {
-    cursor: pointer;
-    padding: 5px 10px;
-    border-radius: 7px;
-    transition: 150ms;
-}
-
-.cycle-container i:hover {
-    background-color: var(--hover);
-    color: #5c7dff;
 }
 
 
@@ -44,6 +48,7 @@
     transition: 150ms;
     height: 34px;
 }
+
 
 #editor-options-btn {
     padding: 0 10px;
@@ -109,7 +114,7 @@
     border-radius: 7px;
     color: var(--important);
     background-color: transparent;
-    transition: background-color 150ms ease;
+    transition: background-color 150ms ease, scale 150ms ease ;
     text-align: start;
 }
 
@@ -118,26 +123,19 @@
 }
 
 .editor-options-dropdown button:hover {
-    background-color: var(--hover);
-    color: #5c7dff;
+    background-color: var(--hover-button-soft);
+    scale: 1.05;
 }
 
-.save-note-btn:hover,
-#editor-options-btn:hover,
-#exit-editor-btn:hover,
-#recently-viewed-notes-btn:hover,
-#editor-flashcard-set-btn:hover {
-    background-color: var(--hover);
-    color: #5c7dff !important;
-}
+
 
 .note-name-input {
     border: none;
     padding: 0 10px;
     height: 100%;
     min-width: 700px;
+    background-color: transparent;
     font-weight: 600;
     font-size: 25px;
-    background-color: transparent;
     color: var(--important);
 }
