--- a/src/frontend/styles/views/homeView.css
+++ b/src/frontend/styles/views/homeView.css
@@ -1,33 +1,36 @@
-.home {
+.home-view {
     display: grid; 
     grid-template-rows: 50px 1fr;
-    padding: 15px 5%;
+    padding: 0 5%;
     height: calc(100dvh - 40px);
+    overflow-y: scroll;
     opacity: 0;
     transform: translateY(30%);
     transition: opacity .7s ease, transform .2s ease;
 }
 
-.home .top {
-    position: relative;
+.home-view .top {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: var(--background);
     display: flex;
     justify-content: center;
 }
 
-.home .middle {
-    padding: 10px;
+.home-view .bottom {
+    padding: 15px;
     outline: none;
-    overflow-y: scroll;
 }
 
-.home .view-title {
+.home-view .view-title {
     display: flex;
     position: relative;
     margin: 50px auto;
     color: var(--important);
 }
 
-.home .recent-folders {
+.home-view .recent-folders {
     max-width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -35,19 +38,11 @@
     gap: 20px;
 }
 
-.home .recent-notes {
+.home-view .recent-notes {
     max-width: 100%;
     display: grid;
     gap: 40px;
     grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
     grid-template-rows: repeat(auto-fill, 280px);
     margin-bottom: 50px;
-}
-
-.flashcard-decks {
-    max-width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-    grid-template-rows: repeat(auto-fill, 205px);
-    gap: 20px;
 }
