--- a/src/frontend/styles/components/folder.css
+++ b/src/frontend/styles/components/folder.css
@@ -102,48 +102,48 @@ pinned-folder-component:hover {
 
 
 
-.color-blue-1 p,
-.color-blue-2 p,
-.color-blue-3 p,
-.color-blue-4 p,
-.color-green-1 p,
-.color-green-2 p,
-.color-green-3 p,
-.color-purple-1 p,
-.color-purple-2 p,
-.color-red-1 p,
-.color-red-2 p,
-.color-orange-1 p,
-.color-orange-2 p {color: #1b1c22}
+.folder-appearance-blue-1 p,
+.folder-appearance-blue-2 p,
+.folder-appearance-blue-3 p,
+.folder-appearance-blue-4 p,
+.folder-appearance-green-1 p,
+.folder-appearance-green-2 p,
+.folder-appearance-green-3 p,
+.folder-appearance-purple-1 p,
+.folder-appearance-purple-2 p,
+.folder-appearance-red-1 p,
+.folder-appearance-red-2 p,
+.folder-appearance-orange-1 p,
+.folder-appearance-orange-2 p {color: #1b1c22}
 
 
-.color-blue-1 { background: var(--background-blue-1); }
-.color-blue-2 { background: var(--background-blue-2); }
-.color-blue-3 { background: var(--background-blue-3); }
-.color-blue-4 { background: var(--background-blue-4); }
-.color-green-1 { background: var(--background-green-1);}
-.color-green-2 { background: var(--background-green-2); }
-.color-green-3 { background: var(--background-green-3); }
-.color-purple-1 { background: var(--background-purple-1); }
-.color-purple-2 { background: var(--background-purple-2); }
-.color-red-1 { background: var(--background-red-1); }
-.color-red-2 { background: var(--background-red-2); }
-.color-orange-1 { background: var(--background-orange-1); }
-.color-orange-2 { background: var(--background-orange-2); }
+.folder-appearance-blue-1 { background: var(--folder-background-blue-1); }
+.folder-appearance-blue-2 { background: var(--folder-background-blue-2); }
+.folder-appearance-blue-3 { background: var(--folder-background-blue-3); }
+.folder-appearance-blue-4 { background: var(--folder-background-blue-4); }
+.folder-appearance-green-1 { background: var(--folder-background-green-1);}
+.folder-appearance-green-2 { background: var(--folder-background-green-2); }
+.folder-appearance-green-3 { background: var(--folder-background-green-3); }
+.folder-appearance-purple-1 { background: var(--folder-background-purple-1); }
+.folder-appearance-purple-2 { background: var(--folder-background-purple-2); }
+.folder-appearance-red-1 { background: var(--folder-background-red-1); }
+.folder-appearance-red-2 { background: var(--folder-background-red-2); }
+.folder-appearance-orange-1 { background: var(--folder-background-orange-1); }
+.folder-appearance-orange-2 { background: var(--folder-background-orange-2); }
 
 
 
-.color-blue-1 #folder-icon { color: var(--color-blue-1) !important; }
-.color-blue-2 #folder-icon { color: var(--color-blue-2) !important; }
-.color-blue-3 #folder-icon { color: var(--color-blue-3) !important; }
-.color-blue-4 #folder-icon { color: var(--color-blue-4) !important; }
-.color-green-1 #folder-icon { color: var(--color-green-1) !important; }
-.color-green-2 #folder-icon { color: var(--color-green-2) !important; }
-.color-green-3 #folder-icon { color: var(--color-green-3) !important; }
-.color-purple-1 #folder-icon { color: var(--color-purple-1) !important; }
-.color-purple-2 #folder-icon { color: var(--color-purple-2) !important; }
-.color-red-1 #folder-icon { color: var(--color-red-1) !important; }
-.color-red-2 #folder-icon { color: var(--color-red-2) !important; }
-.color-orange-1 #folder-icon { color: var(--color-orange-1) !important; }
-.color-orange-2 #folder-icon { color: var(--color-orange-2) !important; }
+.folder-appearance-blue-1 i { color: var(--folder-color-blue-1) !important; }
+.folder-appearance-blue-2 i { color: var(--folder-color-blue-2) !important; }
+.folder-appearance-blue-3 i { color: var(--folder-color-blue-3) !important; }
+.folder-appearance-blue-4 i { color: var(--folder-color-blue-4) !important; }
+.folder-appearance-green-1 i { color: var(--folder-color-green-1) !important; }
+.folder-appearance-green-2 i { color: var(--folder-color-green-2) !important; }
+.folder-appearance-green-3 i { color: var(--folder-color-green-3) !important; }
+.folder-appearance-purple-1 i { color: var(--folder-color-purple-1) !important; }
+.folder-appearance-purple-2 i { color: var(--folder-color-purple-2) !important; }
+.folder-appearance-red-1 i { color: var(--folder-color-red-1) !important; }
+.folder-appearance-red-2 i { color: var(--folder-color-red-2) !important; }
+.folder-appearance-orange-1 i { color: var(--folder-color-orange-1) !important; }
+.folder-appearance-orange-2 i { color: var(--folder-color-orange-2) !important; }
 
